Adiciona endpoints para consultar empresas
